--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,9 +5,9 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "type": "nodemon",
+      "type": "pwa-node",
       "request": "launch",
-      "name": "Launch Program",
+      "name": "nodemon",
       "skipFiles": ["<node_internals>/**"],
       "program": "${workspaceFolder}/app.js",
       "runtimeExecutable": "/home/twiggeh/.yarn/bin/nodemon",
