--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "prettier.useTabs": false // twig please set this to true
+  "prettier.useTabs": false,
+  "git.ignoreLimitWarning": true // twig please set this to true
 }
